[package]
name = "gemini_discord_bot_full"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serenity = { version = "0.11", features = ["client", "gateway", "rustls_backend"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.6"
